--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Test</title>
+		<title>GOES-14 Satellite Imagery Viewer</title>
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" />
 		<script src="bower_components/bootstrap/dist/js/b.min.js"></script>
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="bower_components/moment/min/moment.min.js"></script>
+		<script src="bower_components/jquery-prefetch/jquery.prefetch.min.js"></script>
 	</head>
 	<body>
 		<h1>Pretty satellite imagery!</h1>
