Changed to 1 hour; added Procfile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<h1>Pretty satellite imagery!</h1>
-		<div id="dateblock"></div>
+		<div>Starting timestamp: <span id="dateblock"></span></div>
 		<div id="imageblock"></div>
 		<script src="satcrop.js"></script>
 	</body>
